# fasp

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  clingo_to_ast.py  lexer1.py  lexer2.py  log.py  noxfile.py  pyproject.toml  requirements.txt  test_parser.py
.github/: adjust_version.py
.github/workflows/: deploy.yml  test.yml  test_pypi.yml
asp2fasp/: __init__.py  noxfile.py
asp2fasp/asp2fasp/: functional_predicate_finder.py
asp2fasp/tests/: util.py
asp2funasp/: noxfile.py
asp2funasp/tests/: util.py
envs/: clingo6.yaml  requirements.txt
examples/: aggregate_assigment.lp  aggregate_assignment.lp  avg_distance.lp  coloring.lp  coloring2.lp  companies.lp  ex01_asp.lp  ex02_fun.lp  family.lp  fib.lp  hamiltonian.lp  hamiltonian2.lp  king.lp  kings.lp  min_distance_edge.lp  min_distance_edge_agg.lp  minimun_path.lp  sudoku.lp
examples/pure_asp/: coloring.lp  companies.lp  hamiltonian.lp  min_distance_edge.lp  min_distance_edge_agg.lp  min_distance_edge_agg_ground.lp  minimun_path.lp  unsat.lp
fasp/: __main__.py  __version__.py  app  app.py  control.py  core.py  integration.py  solve.py  solving.py  symbol.py
fasp/ast/: __init__.py  _nodes.py  collect_variables.py  collectors.py  parsing.py  protecting.py  rewriting.py  rewriting_aggregates.py  rewriting_assigments.py  rewritting_aggregates.py  syntax_checking.py  to_asp.py
fasp/parser/: lexer.py
fasp/parsing/: lexer.py  lexer1.py  lexer2.py  parser.py
fasp/syntax_tree/: __init__.py  _context.py  _nodes.py  collectors.py  protecting.py  to_asp.py
fasp/tools/: print_ast.py
fasp/tree_sitter/: clingo_to_ast.py
fasp/util/: ast.py  tree_sitter.py
funasp/: __main__.py  __version__.py  app.py  control.py  message.md  solve.py  symbol.py
funasp/syntax_tree/: __init__.py  _context.py  _nodes.py  collectors.py  types.py
funasp/tools/: __init__.py  (+1 more)
functional_to_casp/: __init__.py  noxfile.py
tests/: examples.py  test_app.py  test_app_patch.py  test_control.py  test_integration.py
(+224 files in other folders)
