[project]
name = "funasp"
version = "0.0.1"
description = "A functional ASP solver"
authors = [
    { name = "Jorge Fandinno", email = "jfandinno@unomaha.edu" },
    { name = "Ravi Pandey", email = "ravipandey@unomaha.edu" }
]
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "colorama>=0.4.6",
    "types-colorama>=0.4.15",
    "clingo>=6.0.0",
]

[project.scripts]
funasp = "funasp.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["funasp"]