[project]
name = "funasp"
version = "0.0.1"
description = "A functional ASP solver"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [ "colorama>=0.4.6", "types-colorama>=0.4.15", "clingo>=6.0.0",]
[[project.authors]]
name = "Jorge Fandinno"
email = "jfandinno@unomaha.edu"

[[project.authors]]
name = "Ravi Pandey"
email = "ravipandey@unomaha.edu"

[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project.scripts]
funasp = "funasp.__main__:main"

[project.urls]
Repository = "https://github.com/krr-uno/funasp"
Source = "https://github.com/krr-uno/funasp"

[tool.setuptools]
packages = [ "funasp",]
