[project]
name = "funasp"
version = "0.0.1"
description = "A functional ASP solver"
readme = "README.md"
# requires-python = ">=3.13"
dependencies = [ "colorama"]

[[project.authors]]
name = "Jorge Fandinno"
email = "jfandinno@unomaha.edu"

[[project.authors]]
name = "Ravi Pandey"
email = "ravipandey@unomaha.edu"

[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project.scripts]
funasp = "funasp.__main__:main"

[project.urls]
Repository = "https://github.com/krr-uno/funasp"
Source = "https://github.com/krr-uno/funasp"

[tool.setuptools.packages.find]
where = ["funasp"]
include = ["*"]

